test/errors/scan_binint.py
0b

0b1_

0b1111_

0b10__01

0b2

0b3

0b4

0b5

0b6

0b7

0b8

0b9

0b101102

0b101103

0b101104

0b101105

0b101106

0b101107

0b101108

0b101109

0b1A

0b1Z

0b11a

0b11snafuzzle

0b11z
